# bindings_example

./: README.md
python/fastint/: CMakeLists.txt  main.c
python/static/: CMakeLists.txt  main.c
